--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,11 +23,11 @@
       font-size: 14px;
     }
   }
-  html,
+  /* html,
   body {
     height: 100%;
     overflow: hidden;
-  }
+  } */
 
   /* Better tap target size for mobile */
   button {
